--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.20.6",
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^12.18.1",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^6.1.13",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.18",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
